<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="wallpaper_settings"
    android:title="@string/wallpaper_settings" >

	<!-- Ad Placeholder -->
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="rotate"
        android:summary="@string/rotateSummary"
        android:title="@string/rotateTitle" />
	<CheckBoxPreference
        android:defaultValue="true"
        android:key="doubleTap"
        android:summary="@string/doubleTapSummary"
        android:title="@string/doubleTapTitle" />
	<CheckBoxPreference
        android:defaultValue="false"
        android:key="swipeEmul"
        android:summary="@string/simulateSwipeSummary"
        android:title="@string/simulateSwipeTitle" />
	 
	 <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="color2"
        android:title="Primary Color"
        android:summary="Choose Primary Cube Color"
        android:defaultValue="0xffffffff"
         />		
         
	 <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="color3"
        android:title="Secondary Color"
        android:summary="Choose Secondary Cube Color"
        android:defaultValue="0xffffffff"
         />		
	 
</PreferenceScreen>